--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,16 @@
 <head>
   <meta charset="utf-8">
   <title>Alivenewscms</title>
-  <base href="/">
+  <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="assets/css/styles.css" rel="stylesheet" type="text/css">
+
+  <!--<link href="css/normalize.css" rel="stylesheet" type="text/css">-->
+  <!--<link href="css/styles.css" rel="stylesheet" type="text/css">-->
+  <!--<script src="js/jquery.min.js"></script>-->
+<!--<script src="js/controller.js"></script>-->
 </head>
 <body>
   <app-root>Loading...</app-root>
